# Projet_sauron

./: robot.py
communication/communication/: CMakeLists.txt
communication/launch/: roslaunch_cognex.launch
communication/src/: check_connect.py  ihm_cognex.py  variables_cognex.py
communication/srv/: identification.srv
deplacement_robot/: CMakeLists.txt
deplacement_robot/launch/: projet_sauron.launch  release4.launch
deplacement_robot/localisation/: extractHoles.py  localisation_exception.py  main.py  matUtils.py  matchPoints.py
deplacement_robot/msg/: Forcer_conforme.msg  Identification.msg  Localisation.msg  Qualite.msg  Result.msg  Trou_identification.msg  Trou_qualite.msg
deplacement_robot/scripts/: calib_finale.py  dummy_listener.py  dummy_talker.py  extractHoles.py  hole_detection.py  localisation_exception.py  main_loc.py  matUtils.py  matchPoints.py  move_robot_controller.py  move_robot_server.py  node_test.py  (+13 more)
motoman_hc10_moveit_config/: CMakeLists.txt
motoman_hc10_moveit_config/config/: kinematics.yaml  motoman_hc10.srdf  ompl_planning.yaml
motoman_hc10_moveit_config/launch/: moveit.rviz  moveit_planning_demo.launch  moveit_planning_execution.launch  moveit_planning_execution_box.launch  release4.launch
motoman_hc10_moveit_config/scripts/: StepReader.py  add_interferences.py  add_interferences_box.py  add_interferences_simulation.py  execute_trajectory.py  move_robot_server.py  move_robot_server_demo_release4.py  move_to_joints.py  move_to_pose.py  move_to_pose1.py  pose_msg_maker.py  run_identification.py  run_qualite.py  useful_robot.py
(+4 files in other folders)
